<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/ll_divider_h"
        android:orientation="vertical"
        android:showDividers="middle|end">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/input_habit_name"
            android:imeOptions="actionSearch"
            android:paddingLeft="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            android:singleLine="true"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/main_text_hint"
            android:textSize="@dimen/main_font" />

        <EditText
            android:id="@+id/et_des"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1.0"
            android:background="@color/transparent"
            android:gravity="center_vertical|left"
            android:hint="@string/input_encourage_to_say"
            android:imeOptions="actionSearch"
            android:paddingLeft="@dimen/common_padding"
            android:paddingRight="@dimen/common_padding"
            android:singleLine="true"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/main_text_hint"
            android:textSize="@dimen/main_font" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingRight="@dimen/common_padding"
                android:paddingLeft="@dimen/common_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="left|center_vertical"
                    android:text="@string/icon_option"
                    android:textSize="@dimen/main_font_lll"
                    android:textColor="@color/main_text_hint"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_icon_reset"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:gravity="right"
                    android:text="@string/reset"
                    android:textSize="@dimen/main_font_lll"
                    android:textColor="@color/hint_text_colors"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <GridView
                android:scrollbars="none"
                android:id="@+id/gv_icon"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:focusable="false"
                android:layout_marginLeft="@dimen/common_padding"
                android:layout_marginRight="@dimen/common_padding"
                android:verticalSpacing="20dp"
                android:horizontalSpacing="20dp"
                android:focusableInTouchMode="false"
                android:numColumns="6"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:paddingRight="@dimen/common_padding"
                android:paddingLeft="@dimen/common_padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:gravity="left|center_vertical"
                    android:text="@string/color_option"
                    android:textSize="@dimen/main_font_lll"
                    android:textColor="@color/main_text_hint"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_color_reset"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:gravity="right"
                    android:text="@string/reset"
                    android:textSize="@dimen/main_font_lll"
                    android:textColor="@color/hint_text_colors"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <GridView
                android:scrollbars="none"
                android:id="@+id/gv_colors"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:focusable="false"
                android:layout_marginLeft="@dimen/common_padding"
                android:layout_marginRight="@dimen/common_padding"
                android:verticalSpacing="27dp"
                android:horizontalSpacing="27dp"
                android:focusableInTouchMode="false"
                android:numColumns="7"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>